--- a/Capstone/Capstone/MainWindow.xaml
+++ b/Capstone/Capstone/MainWindow.xaml
@@ -206,15 +206,22 @@
                         Margin="0,0,0,8"
                         Style="{StaticResource MaterialDesignHeadline5TextBlock}"
                         Text="About" />
-                    <TextBlock>
-                        <Run
-                            Text="About tab content. Default look and behaviors." />
-                        <LineBreak />
-                        <LineBreak />
-                        <Run
-                            FontStyle="Italic">
-                            Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...
+                    <TextBlock TextWrapping="Wrap">
+                        <Run>
+                            Buggy is a desktop price scraper application that finds the best deals for you across several major retailers. Retailers include Amazon, Costco, Target, Walmart, and eBay. 
                         </Run>
+                        <LineBreak/>
+
+                        We simplify bargain hunting by condensing product information into one, convenient place. 
+
+                        <LineBreak/>
+                        You can save products to get price drop notifications, look them up faster, and view a price history based on previous searches. 
+                        <LineBreak/>
+                        When you are ready to buy, simply click on the buy button and you will be directed to the vendor's page to check out. 
+                        
+                        <LineBreak/>
+                        <LineBreak/>
+                        Shop smarter with Buggy!
                     </TextBlock>
                 </StackPanel>
             </TabItem>
