--- a/Capstone/Capstone/MainWindow.xaml
+++ b/Capstone/Capstone/MainWindow.xaml
@@ -54,6 +54,7 @@
                     materialDesign:NavigationRailAssist.ShowSelectionBackground="True"
                     SnapsToDevicePixels="True"
                     Style="{StaticResource MaterialDesignNavigationRailTabControl}"
+                    Background="#151515"
                     TabStripPlacement="Left">
             <TabItem>
                 <TabItem.Header>
@@ -70,7 +71,7 @@
                             Text="New Item" />
                     </StackPanel>
                 </TabItem.Header>
-                <Grid Grid.Column="3" Grid.RowSpan="2" Margin="18,0,0,0" Background="{DynamicResource BackgroundColor}">
+                <Grid Grid.Column="3" Grid.RowSpan="2" Margin="0,0,0,0" Background="{DynamicResource BackgroundColor}">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="5"/>
                         <RowDefinition Height="Auto"/>
